blog on semantic search API

--- a/frontend/assets/blog/2024-12-01-launch-week-1.mdx
+++ b/frontend/assets/blog/2024-12-01-launch-week-1.mdx
@@ -16,5 +16,15 @@ Stay tuned for Laminar launches and follow us on [X](https://x.com/skull88888888
 
 ## Launch day 1, December 2
 
-_Coming soon._
+Flow – a dynamic task engine for building AI agents. See my [X post](https://x.com/skull8888888888/status/1863661536180572412)
+for more details.
 
+## Launch day 2, December 3
+
+Evaluations that just work. Read our [blog post](/blog/2024-12-03-evals)
+for more details.
+
+## Launch day 3, December 4
+
+Semantic search – a way to find the most similar examples in your dataset. Read our
+[blog post](/blog/2024-12-04-semantic-search) for more details.
