docs: update 2024-12-05-labeling-queues.mdx
accomodate -> accommodate

--- a/frontend/assets/blog/2024-12-05-labeling-queues.mdx
+++ b/frontend/assets/blog/2024-12-05-labeling-queues.mdx
@@ -35,7 +35,7 @@ From our experience, teams benefit the most from labeling when:
 - In case of LLM-as-a-judge, manual labeling is done with the same criteria as the LLM-as-a-judge
 
 The biggest challenge is that domain experts are not necessarily familiar with the concepts
-of spans, telemetry, and JSON. This makes it even harder to accomodate for both technical
+of spans, telemetry, and JSON. This makes it even harder to accommodate for both technical
 and non-technical team members in the labeling process.
 
 To address this, we've added a new feature to Laminar – labeling queues.
