--- a/frontend/assets/blog/2024-12-05-labeling-queues.mdx
+++ b/frontend/assets/blog/2024-12-05-labeling-queues.mdx
@@ -3,8 +3,8 @@ title: "Launch Week #1, Day 4: Labeling Queues"
 date: "2024-12-05"
 description: "Labeling queues in Laminar"
 author:
-  name: Dinmukhamed Mailibay
-  url: https://x.com/din_mlb
+  name: Robert Kim
+  url: https://x.com/skull8888888888
 image: /blog/2024-12-05-labeling-queues.png
 tags: ["launch week 1", "labeling queues", "labeling", "labels"]
 ---
