--- a/frontend/assets/blog/2025-12-08-stagehand-laminar.mdx
+++ b/frontend/assets/blog/2025-12-08-stagehand-laminar.mdx
@@ -129,7 +129,6 @@ Both workflows and Agent runs produce full traces in your Laminar dashboard with
 
 - **Session recordings synced to your traces** — Watch exactly what your agent saw, rendered as video. Laminar captures the full browser session and synchronizes it with your execution timeline, so you can see the page state at every step. It's like a flight recorder for your browser automation.
 - **Full LLM visibility** — Every prompt, response, and token count across workflows and Agent executions
-
 - **Full LLM visibility** — Every prompt, response, and token count across workflows and Agent executions
 - **Execution timelines** — Your entire run as a single navigable trace
 - **Playground debugging** — Click any LLM span to open it with the exact config, prompt, and schema, ready to iterate
@@ -145,4 +144,4 @@ When you're ready to move beyond local development, our friends at [Kernel](http
 
 Stagehand gives you flexibility. Playwright when you need control, AI when you need adaptability, Agents when you want to delegate. Now you can see exactly what's happening at every level.
 
-[\*\*Start tracing your Stageh
+[**Start tracing your Stagehand automations →**](https://laminar.sh/projects)
