--- a/frontend/assets/blog/2025-12-08-stagehand-laminar.mdx
+++ b/frontend/assets/blog/2025-12-08-stagehand-laminar.mdx
@@ -12,9 +12,7 @@ When automating for the web, Stagehand gives developers access to both programma
 
 The tradeoff with this agency has always been visibility. When your workflow fails on step 36, or your Agent starts hallucinating, you're left guessing what happened.
 
-Now you can see everything.
-
-Laminar integrates with Stagehand, giving you full observability across the spectrum—from scripted workflows to autonomous Agent executions. Every LLM decision, every browser action, synced to a recording of what your automation actually saw and pondered.
+Now you can see everything. With Laminar, Stagehand, & Kernel, you have full observability for every agent decision and action, synced to a recording of what your agent actually saw and pondered.
 
 ## What You Can Do
 
@@ -128,7 +126,6 @@ Both workflows and Agent runs produce full traces in your Laminar dashboard with
 ## What You Get
 
 - **Session recordings synced to your traces** — Watch exactly what your agent saw, rendered as video. Laminar captures the full browser session and synchronizes it with your execution timeline, so you can see the page state at every step. It's like a flight recorder for your browser automation.
-- **Full LLM visibility** — Every prompt, response, and token count across workflows and Agent executions
 - **Full LLM visibility** — Every prompt, response, and token count across workflows and Agent executions
 - **Execution timelines** — Your entire run as a single navigable trace
 - **Playground debugging** — Click any LLM span to open it with the exact config, prompt, and schema, ready to iterate
