--- a/frontend/assets/blog/2026-01-26-signals-launch.mdx
+++ b/frontend/assets/blog/2026-01-26-signals-launch.mdx
@@ -38,7 +38,7 @@ Your first priority is visibility into what's breaking. You define signals for t
 
 > **`empty_patch`** - Did the agent open a PR with no code changes?
 
-You set these signals to trigger on every new trace. When something goes wrong, you don't find out from users - you see it in your dashboard, clustered by failure type, with full trace context one click away.
+You set these signals to trigger on every new trace. When something goes wrong, you don't find out from users - you see it in your dashboard, clustered by failure type, with full trace context one click away. You can also connect Slack to get real-time notifications for signal events.
 
 ![Add trigger dialog with filters](/blog/2026-01-26-add-trigger.png)
 
