feat: update blog title

--- a/frontend/assets/blog/2026-01-26-signals-launch.mdx
+++ b/frontend/assets/blog/2026-01-26-signals-launch.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Introducing Signals"
+title: "Introducing Signals — get insights from agent traces at scale"
 date: "2026-01-26"
 description: "Extract insights from any AI agent trace, past or present. Define a signal once, backfill your history, and catch failures before users do."
 author:
