--- a/frontend/assets/blog/2026-01-29-laminar-vs-langfuse-vs-langsmith-llm-observability-compared.mdx
+++ b/frontend/assets/blog/2026-01-29-laminar-vs-langfuse-vs-langsmith-llm-observability-compared.mdx
@@ -278,8 +278,6 @@ Langfuse offers cloud plans and a **free self-host open-source option** (MIT lic
 
 ### LangSmith
 
-### LangSmith
-
 LangSmith offers three deployment models:
 
 - **Cloud:** Fully managed by LangChain (data in GCP us-central-1, or EU region)
@@ -319,6 +317,7 @@ You can send traces to LangSmith alongside other OTel-compatible backends, or ex
 - **Real-time trace visibility** during long-running operations
 - **Replay from spans** as a first-class workflow
 - **Browser-agent session replay** tied directly to traces
+- Open-source core with self-hosting options
 - OpenTelemetry ingestion for existing OTel pipelines
 
 ### Langfuse
@@ -346,6 +345,7 @@ You can send traces to LangSmith alongside other OTel-compatible backends, or ex
 - Real-time visibility during long-running operations is a must-have
 - Replay from captured spans is critical to your iteration workflow
 - You're building browser-automation agents and need synchronized session replay
+- You prefer open-source tooling with self-host flexibility
 - Data-volume pricing fits your usage pattern better than trace-based
 
 **Choose Langfuse if:**
