--- a/frontend/assets/blog/2025-12-08-stagehand-laminar.mdx
+++ b/frontend/assets/blog/2025-12-08-stagehand-laminar.mdx
@@ -4,7 +4,7 @@ date: "2025-12-08"
 description: ""
 author:
   name: Sam Komesarook
-  url: https://x.com/komesarook
+  url: https://x.com/raymondmarkable
 tags: ["stagehand"]
 ---
 
