--- a/frontend/assets/blog/2026-01-20-debugging-parallel-agents.mdx
+++ b/frontend/assets/blog/2026-01-20-debugging-parallel-agents.mdx
@@ -4,7 +4,7 @@ date: "2026-01-20"
 description: ""
 author:
   name: Sam Komesarook
-  url: https://x.com/komesarook
+  url: https://x.com/raymondmarkable
 tags: ["agents", "debugging"]
 ---
 
