--- a/frontend/assets/blog/2026-02-05-the-anatomy-of-a-wasted-credit.mdx
+++ b/frontend/assets/blog/2026-02-05-the-anatomy-of-a-wasted-credit.mdx
@@ -36,19 +36,19 @@ Over a three-day window, the signal flagged 14 events across the traces we analy
 
 ### Retry Loops on Configuration Conflicts
 
-One trace showed the model repeatedly attempting to resolve ESM/CommonJS configuration conflicts across multiple turns ([trace](https://laminar.sh/shared/traces/0185dfc9-c51b-ffb0-3632-afe5ee05da3a)). It started by attempting to align `tailwind.config.js` with ESM, then went back and forth trying different approaches to make the module systems compatible.
+[One trace](https://laminar.sh/shared/traces/0185dfc9-c51b-ffb0-3632-afe5ee05da3a) showed the model repeatedly attempting to resolve ESM/CommonJS configuration conflicts across multiple turns. It started by attempting to align `tailwind.config.js` with ESM, then went back and forth trying different approaches to make the module systems compatible.
 
 Anyone who's dealt with ESM/CommonJS interop knows this is a common pain point, but the model was essentially thrashing through solutions rather than diagnosing the root cause. Each attempt burned compute without making progress.
 
 ### Oscillating File Generation
 
-In another trace, the model exhibited an oscillating outputs pattern ([trace](https://laminar.sh/shared/traces/fe196d5b-fea9-e9db-b838-29717e06a871)). After successfully creating a Next.js project and generating initial files, it began regenerating files it had already created, cycling through variations without meaningful changes between them.
+In [another trace](https://laminar.sh/shared/traces/fe196d5b-fea9-e9db-b838-29717e06a871), the model exhibited an oscillating outputs pattern. After successfully creating a Next.js project and generating initial files, it began regenerating files it had already created, cycling through variations without meaningful changes between them.
 
 The model wasn't improving the code. It was churning through equivalent outputs.
 
 ### Declaring Victory Prematurely
 
-The most striking pattern was a validation-generation mismatch where the model declared the application live and provided a preview URL to the user, even though the `pnpm run dev` command crucial for starting the server hadn't actually completed successfully ([trace](https://laminar.sh/shared/traces/14cc4828-c476-5bb3-a44d-3ae9e91b6112)).
+The most striking pattern was a validation-generation mismatch where the model declared the application live and provided a preview URL to the user, even though the `pnpm run dev` command crucial for starting the server hadn't actually completed successfully in [this trace](https://laminar.sh/shared/traces/14cc4828-c476-5bb3-a44d-3ae9e91b6112).
 
 From the user's perspective, they received a link and assumed their app was running. From the trace, we could see the model confidently presenting a result that didn't exist yet. This kind of mismatch doesn't just waste credits; it erodes user trust when they click through to a broken preview.
 
