Revise blog post on rebuilding startup with AI agent
Updated the blog post to elaborate on the Claude Agent SDK and its integration with Laminar.

--- a/frontend/assets/blog/2026-02-10-rebuilding-my-first-startup-as-an-ai-agent.mdx
+++ b/frontend/assets/blog/2026-02-10-rebuilding-my-first-startup-as-an-ai-agent.mdx
@@ -22,7 +22,7 @@ The startup didn't make it. But the idea never really left my head.
 
 Anthropic released the [Claude Agent SDK](https://platform.claude.com/docs/en/agent-sdk/overview) and I immediately saw what Liveable should have been. Not a pipeline. An agent.
 
-The SDK gives you everything that powers Claude Code as a programmable Python library. You define tools, hand them to Claude, and let the agent figure out how to use them. What really sold me was the subagent architecture. When the agent needs crime data, it doesn't just make an API call. It spins up a subagent with [Browser Use](https://www.browseruse.com/) that can navigate real websites, read dynamic content, extract structured data from pages that would break a simple fetch. When it needs amenity data, it calls a dedicated Google Places tool. Census data, Walk Score, housing prices, each one is its own tool. And every tool call shows up as a nested span in the trace, so you can see exactly what got delegated and what came back.
+The SDK gives you everything that powers Claude Code as a programmable Python library. You define tools, hand them to Claude, and let the agent figure out how to use them. What really sold me was the subagent architecture. When the agent needs crime data, it doesn't just make an API call. It spins up a subagent with [Browser Use](https://www.browser-use.com/) that can navigate real websites, read dynamic content, extract structured data from pages that would break a simple fetch. When it needs amenity data, it calls a dedicated Google Places tool. Census data, Walk Score, housing prices, each one is its own tool. And every tool call shows up as a nested span in the trace, so you can see exactly what got delegated and what came back.
 
 The other piece is [Laminar](https://laminar.sh). The integration with the Claude Agent SDK is what made this project actually work. Two lines of code and every tool call, every subagent invocation, every LLM reasoning step gets captured as a trace. More on that in a second.
 
