Update blog title and content for AI Agent SDK

--- a/frontend/assets/blog/2026-02-10-rebuilding-my-first-startup-as-an-ai-agent.mdx
+++ b/frontend/assets/blog/2026-02-10-rebuilding-my-first-startup-as-an-ai-agent.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Rebuilding My First Startup as an AI Agent"
+title: "Rebuilding My First Startup with Claude Agent SDK"
 date: "2026-02-10"
 description: "Rebuilding Liveable as a Claude Agent SDK project, with Laminar signals driving the debugging loop."
 author:
@@ -8,7 +8,7 @@ author:
 tags: ["agents", "observability", "laminar", "claude", "tracing", "browser-use"]
 ---
 
-# Rebuilding My First Startup as an AI Agent
+# Rebuilding My First Startup with Claude Agent SDK
 
 Years ago I worked at a startup called Liveable. You'd enter a zip code, tell us what you cared about in a neighborhood (nightlife, walkability, schools, whatever) and we'd pull data from a bunch of sources to give you a liveability score. Google Places for amenities, census data for demographics, Walk Score, crime stats, housing prices, new developments. All compressed into one personalized report.
 
